feat: :sparkles: created primitive recommendation
